HTM-1710: fix deprecated API calls